Compiler/src/main/java/Testing/Tests/SemanticTests/passing/MultiplDeclaration.ru
start{
Bool a,b,c;
Char j;
Int f;}