Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateAttribute.ru
struct A{
Int a;
Bool a;}
impl A{
.(){}}
start{}